fullSandbox11072023/force-app/main/default/objects/Latam_Sales_Transactions__c/Latam_Sales_Transactions__c.object-meta.xml
<CustomObject>
    <description>This object is used to create the Latam Rainbow Report</description>
    <label>LATAM Sales Transaction</label>
    <nameField>
        <displayFormat>RR - {00000}</displayFormat>
        <label>Latam Sales Transactions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LATAM Sales Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>