fullSandbox11072023/force-app/main/default/objects/Latam_Sales_Transactions__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LATAM Sales Transactions</relationshipLabel>
    <relationshipName>LATAM_Sales_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>