fullSandbox11072023/force-app/main/default/objects/Latam_Sales_Transactions__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <label>Account ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>