fullSandbox11072023/force-app/main/default/objects/Latam_Sales_Transactions__c/fields/Account_Name_Map__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Map__c</fullName>
    <formula>Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name Map</label>
    <type>Text</type>
</CustomField>