fullSandbox11072023/force-app/main/default/objects/Latam_Sales_Transactions__c/fields/Financial_Site__c.field-meta.xml
<CustomField>
    <fullName>Financial_Site__c</fullName>
    <label>Financial Site</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>US10</fullName>
            </value>
            <value>
                <fullName>US30</fullName>
            </value>
            <value>
                <fullName>US50</fullName>
            </value>
            <value>
                <fullName>UY10</fullName>
            </value>
            <value>
                <fullName>IE10</fullName>
            </value>
            <value>
                <fullName>MX40</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>