fullSandbox11072023/force-app/main/default/objects/Latam_Sales_Transactions__c/fields/Product_Class__c.field-meta.xml
<CustomField>
    <fullName>Product_Class__c</fullName>
    <label>Product Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0002</fullName>
            </value>
            <value>
                <fullName>0003</fullName>
            </value>
            <value>
                <fullName>0005</fullName>
            </value>
            <value>
                <fullName>0008</fullName>
            </value>
            <value>
                <fullName>0009</fullName>
            </value>
            <value>
                <fullName>0013</fullName>
            </value>
            <value>
                <fullName>0017</fullName>
            </value>
            <value>
                <fullName>0018</fullName>
            </value>
            <value>
                <fullName>0021</fullName>
            </value>
            <value>
                <fullName>0029</fullName>
            </value>
            <value>
                <fullName>0032</fullName>
            </value>
            <value>
                <fullName>0099</fullName>
            </value>
            <value>
                <fullName>0001</fullName>
            </value>
            <value>
                <fullName>0014</fullName>
            </value>
            <value>
                <fullName>0025</fullName>
            </value>
            <value>
                <fullName>0004</fullName>
            </value>
            <value>
                <fullName>0006</fullName>
            </value>
            <value>
                <fullName>0007</fullName>
            </value>
            <value>
                <fullName>0010</fullName>
            </value>
            <value>
                <fullName>0011</fullName>
            </value>
            <value>
                <fullName>0012</fullName>
            </value>
            <value>
                <fullName>0015</fullName>
            </value>
            <value>
                <fullName>0016</fullName>
            </value>
            <value>
                <fullName>0023</fullName>
            </value>
            <value>
                <fullName>0026</fullName>
            </value>
            <value>
                <fullName>0027</fullName>
            </value>
            <value>
                <fullName>0028</fullName>
            </value>
            <value>
                <fullName>0030</fullName>
            </value>
            <value>
                <fullName>0033</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>