fullSandbox11072023/force-app/main/default/objects/Latam_Sales_Transactions__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <formula>&quot;Q&quot; &amp; TEXT(FLOOR(((MONTH(Transaction_Date__c)-1)/3)+1))</formula>
    <label>Quarter</label>
    <type>Text</type>
</CustomField>