fullSandbox11072023/force-app/main/default/objects/Latam_Sales_Transactions__c/fields/Sales_Region_Formula__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region_Formula__c</fullName>
    <formula>TEXT(Account__r.Sales_Region__c)</formula>
    <label>Sales Region Map</label>
    <type>Text</type>
</CustomField>