fullSandbox11072023/force-app/main/default/objects/Latam_Sales_Transactions__c/fields/Transaction_Amount_Q2__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Amount_Q2__c</fullName>
    <formula>If( LEFT(Quarter__c,2) = &quot;Q2&quot;, Transaction_Amount__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Amount Q2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>