fullSandbox11072023/force-app/main/default/objects/Latam_Sales_Transactions__c/listViews/All_Errors.listView-meta.xml
<ListView>
    <fullName>All_Errors</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Product_Family1__c</columns>
    <columns>Product_Family_Map__c</columns>
    <columns>Sales_Region_Formula__c</columns>
    <columns>Sales_Region__c</columns>
    <columns>SAP_Code__c</columns>
    <columns>Transaction_Amount__c</columns>
    <columns>Transaction_Date__c</columns>
    <columns>Account_ID__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Financial_Site__c</columns>
    <columns>Product_Class__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Family1__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <label>All_Errors</label>
    <language>en_US</language>
</ListView>