fullSandbox11072023/force-app/main/default/objects/Latam_Sales_Transactions__c/listViews/AllMexico.listView-meta.xml
<ListView>
    <fullName>AllMexico</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Account_ID__c</columns>
    <columns>Account__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Financial_Site__c</columns>
    <columns>Product_Class__c</columns>
    <columns>Product_Family1__c</columns>
    <columns>Product_Family_Map__c</columns>
    <columns>Sales_Region_Formula__c</columns>
    <columns>Sales_Region__c</columns>
    <columns>Transaction_Amount__c</columns>
    <columns>Transaction_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Region_Formula__c</field>
        <operation>equals</operation>
        <value>Mexico</value>
    </filters>
    <filters>
        <field>Transaction_Date__c</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>All Mexico</label>
    <language>en_US</language>
</ListView>